add confirmação de senha

--- a/templates/register.html
+++ b/templates/register.html
@@ -130,6 +130,10 @@
                         <input type="password" class="form-control" id="floatingPassword" name="senha" placeholder="Senha" required>
                         <label for="floatingPassword">Senha</label>
                     </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control" id="floatingConfirmPassword" name="confirmar_senha" placeholder="Confirme a Senha" required>
+                        <label for="floatingConfirmPassword">Confirme a Senha</label>
+                    </div>                    
                     <button type="submit" class="btn btn-primary">Cadastrar</button>
                 </form>
                 <div class="mt-3 text-center">
