--- a/templates/addTask.html
+++ b/templates/addTask.html
@@ -87,7 +87,6 @@
     </style>
 </head>
 <body>
-    <!-- Sidebar -->
     <div class="sidebar">
         <a href="{{ url_for('dashboard') }}" class="text-white">
             <img src="{{ url_for('static', filename='images/list.png')  }}" alt="Listar Tarefas">
@@ -103,7 +102,6 @@
         </a>
     </div>
 
-    <!-- Main Content -->
     <div class="content">
         <h2>Criar Nova Tarefa</h2>
         <form method="POST" action="{{ url_for('criar_tarefa') }}">
@@ -152,12 +150,11 @@
         
     </div>
 
-    <!-- Bootstrap JS and Icons -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script>
         async function confirmLogout(event) {
-            event.preventDefault(); // Previne o comportamento padrão do link
+            event.preventDefault();
 
             const result = await Swal.fire({
                 title: 'Você tem certeza que deseja sair?',
@@ -169,7 +166,7 @@
             });
 
             if (result.isConfirmed) {
-                window.location.href = "{{ url_for('logout') }}"; // Redireciona para a rota de logout
+                window.location.href = "{{ url_for('logout') }}";
             }
         }
     </script>
