--- a/templates/editar_tarefa.html
+++ b/templates/editar_tarefa.html
@@ -104,7 +104,6 @@
     </style>
 </head>
 <body>
-    <!-- Sidebar -->
     <div class="sidebar">
         <a href="{{ url_for('dashboard') }}" class="text-white">
             <img src="{{ url_for('static', filename='images/list.png')  }}" alt="Listar Tarefas">
@@ -120,7 +119,6 @@
         </a>
     </div>
 
-    <!-- Main Content -->
     <div class="content">
         <h2>Editar Tarefa</h2>
         <form method="POST" action="{{ url_for('editar_tarefa', id=tarefa[0]) }}">
@@ -168,7 +166,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         async function confirmLogout(event) {
-            event.preventDefault(); // Previne o comportamento padrão do link
+            event.preventDefault();
 
             const result = await Swal.fire({
                 title: 'Você tem certeza que deseja sair?',
@@ -180,7 +178,7 @@
             });
 
             if (result.isConfirmed) {
-                window.location.href = "{{ url_for('logout') }}"; // Redireciona para a rota de logout
+                window.location.href = "{{ url_for('logout') }}";
             }
         }
     </script>
