--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,6 @@
     </style>
 </head>
 <body>
-    <!-- Sidebar -->
     <div class="sidebar">
         <a href="{{ url_for('dashboard') }}" class="text-white">
             <img src="{{ url_for('static', filename='images/list.png')  }}" alt="Listar Tarefas">
@@ -121,10 +120,8 @@
         </a>        
     </div>
 
-    <!-- Main Content -->
     <div class="content">
         <h2>Gerenciador de Tarefas</h2>
-        <!-- Filtro de Tarefas -->
         <div class="mb-4">
             <h5>Opções de Filtragem</h5>
             <div class="row">
@@ -174,13 +171,10 @@
         </div>
         
 
-        <!-- Lista de Tarefas -->
         <div class="row" id="taskList">
-            <!-- As tarefas serão inseridas aqui pelo JavaScript -->
         </div>
     </div>
 
-    <!-- Bootstrap JS and Icons -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script>
@@ -205,7 +199,6 @@
             fetch(`/tasks?${queryParams}`)
                 .then(response => response.json())
                 .then(data => {
-                    // Atualizar a lista de tarefas com os dados recebidos
                     const taskList = document.getElementById('taskList');
                     taskList.innerHTML = '';
                     data.tasks.forEach(task => {
@@ -238,10 +231,10 @@
 
         async function fetchTasks() {
             try {
-                const response = await fetch('/tasks'); // Endpoint para obter tarefas
+                const response = await fetch('/tasks');
                 const data = await response.json();
                 const taskList = document.getElementById('taskList');
-                taskList.innerHTML = ''; // Limpar a lista antes de adicionar novas tarefas
+                taskList.innerHTML = '';
 
                 data.tasks.forEach(task => {
                 const statusLabel = getStatusLabel(task.status);
@@ -270,7 +263,6 @@
             }
         }
 
-        // Função para obter a classe do status
         function getStatusLabel(status) {
             switch (status) {
                 case 'Concluída':
@@ -297,7 +289,7 @@
             if (result.isConfirmed) {
                 try {
                     await fetch(`/tasks/${id}`, { method: 'DELETE' });
-                    fetchTasks(); // Atualiza a lista de tarefas após exclusão
+                    fetchTasks();
                     Swal.fire('Excluído!', 'Sua tarefa foi excluída.', 'success');
                 } catch (error) {
                     console.error('Erro ao excluir tarefa:', error);
@@ -308,7 +300,7 @@
 
 
         async function confirmLogout(event) {
-            event.preventDefault(); // Previne o comportamento padrão do link
+            event.preventDefault();
 
             const result = await Swal.fire({
                 title: 'Você tem certeza que deseja sair?',
@@ -320,7 +312,7 @@
             });
 
             if (result.isConfirmed) {
-                window.location.href = "{{ url_for('logout') }}"; // Redireciona para a rota de logout
+                window.location.href = "{{ url_for('logout') }}";
             }
         }
 
@@ -331,7 +323,6 @@
         }
 
 
-        // Carregar tarefas ao iniciar a página
         window.onload = fetchTasks;
     </script>
 </body>
